feat: grid-template-areas属性

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <div class="container">
             <a href="./page/page5/index.html">grid-row-gap 属性，grid-column-gap 属性，grid-gap 属性</a>
         </div>
+        <div class="container">
+            <a href="./page/page6/index.html">grid-template-areas 属性</a>
+        </div>
+        <div class="container">
+            <a href="./page/page7/index.html">grid-auto-flow 属性</a>
+        </div>
     </div>
 </body>
 
