--- a/pages/page6/index.html
+++ b/pages/page6/index.html
@@ -126,6 +126,7 @@
         <div class="item item5">5</div>
         <div class="item item6">6</div>
     </div>
+    <div><a href="../../index.html">返回列表</a></div>
 </body>
 
 </html>
