--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
             Grid的示例
         </div>
         <div class="container">
-            <a href="./page/page1/index.html">概述</a>
+            <a href="./pages/page1/index.html">概述</a>
         </div>
         <div class="container">
-            <a href="./page/page2/index.html">display属性-grid</a>
+            <a href="./pages/page2/index.html">display属性-grid</a>
         </div>
         <div class="container">
-            <a href="./page/page3/index.html">display属性-inline-grid</a>
+            <a href="./pages/page3/index.html">display属性-inline-grid</a>
         </div>
         <div class="container">
-            <a href="./page/page4/index.html">grid-template-columns属性，grid-template-rows属性</a>
+            <a href="./pages/page4/index.html">grid-template-columns属性，grid-template-rows属性</a>
         </div>
         <div class="container">
-            <a href="./page/page5/index.html">grid-row-gap 属性，grid-column-gap 属性，grid-gap 属性</a>
+            <a href="./pages/page5/index.html">grid-row-gap 属性，grid-column-gap 属性，grid-gap 属性</a>
         </div>
         <div class="container">
-            <a href="./page/page6/index.html">grid-template-areas 属性</a>
+            <a href="./pages/page6/index.html">grid-template-areas 属性</a>
         </div>
         <div class="container">
-            <a href="./page/page7/index.html">grid-auto-flow 属性</a>
+            <a href="./pages/page7/index.html">grid-auto-flow 属性</a>
         </div>
     </div>
 </body>
