--- a/pages/page7/index.html
+++ b/pages/page7/index.html
@@ -7,18 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>Grid grid-row-gap属性 grid-column-gap属性 grid-gap属性</title>
+    <title>Grid grid-auto-flow属性</title>
     <link rel="stylesheet" type="text/css" href="../../style/main.css">
     <link rel="stylesheet" type="text/css" href="./page.css">
 </head>
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-row-gap 属性，grid-column-gap 属性，grid-gap 属性</div>
+    <div class="page-title">grid-auto-flow 属性</div>
     <pre class="code">
         .container {
-            grid-row-gap: 10px;
-            grid-column-gap: 10px;
+            grid-auto-flow: row; // 默认值
         }</pre>
     <div class="container container1">
         <div class="item item1">1</div>
@@ -33,7 +32,7 @@
     </div>
     <pre class="code">
         .container {
-            grid-gap: 20px;
+            grid-auto-flow: column;
         }</pre>
     <div class="container container2">
         <div class="item item1">1</div>
@@ -48,9 +47,53 @@
     </div>
     <pre class="code">
         .container {
-            grid: 30px;
+            grid: 10px;
+        }
+        .item1, .item2 {
+            grid-column-start: 1;
+            grid-column-end: 3;
         }</pre>
     <div class="container container3">
+        <div class="item item1">1</div>
+        <div class="item item2">2</div>
+        <div class="item item3">3</div>
+        <div class="item item4">4</div>
+        <div class="item item5">5</div>
+        <div class="item item6">6</div>
+        <div class="item item7">7</div>
+        <div class="item item8">8</div>
+        <div class="item item9">9</div>
+    </div>
+    <pre class="code">
+        .container {
+            grid: 10px;
+            grid-auto-flow: row dense;
+        }
+        .item1, .item2 {
+            grid-column-start: 1;
+            grid-column-end: 3;
+        }</pre>
+    <div class="container container4">
+        <div class="item item1">1</div>
+        <div class="item item2">2</div>
+        <div class="item item3">3</div>
+        <div class="item item4">4</div>
+        <div class="item item5">5</div>
+        <div class="item item6">6</div>
+        <div class="item item7">7</div>
+        <div class="item item8">8</div>
+        <div class="item item9">9</div>
+    </div>
+    <pre class="code">
+        .container {
+            grid: 10px;
+            grid-auto-flow: column dense;
+        }
+        .item1, .item2 {
+            grid-column-start: 1;
+            grid-column-end: 3;
+        }</pre>
+    <div class="container container5">
         <div class="item item1">1</div>
         <div class="item item2">2</div>
         <div class="item item3">3</div>
