--- a/pages/page9/index.html
+++ b/pages/page9/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>Grid grid-auto-flow属性</title>
+    <title>Grid justify-content属性 align-content属性 place-content属性</title>
     <link rel="stylesheet" type="text/css" href="../../style/main.css">
     <link rel="stylesheet" type="text/css" href="./page.css">
 </head>
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-auto-flow 属性</div>
+    <div class="page-title">justify-content 属性，align-content 属性，place-content 属性</div>
     <pre class="code">
         .container {
             grid-auto-flow: row; // 默认值
