--- a/pages/page10/index.html
+++ b/pages/page10/index.html
@@ -7,19 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>Grid display属性</title>
+    <title>Grid grid-template属性 grid属性</title>
     <link rel="stylesheet" type="text/css" href="../../style/main.css">
     <link rel="stylesheet" type="text/css" href="./page.css">
 </head>
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">display属性</div>
+    <div class="page-title">grid-template 属性，grid 属性</div>
     <pre class="code">
-            .container {
-                display: grid;
-            }</pre>
-    <span>foo</span>
+        .container {
+            grid-template: ". g g g . " 100px
+                            "o_ . . . . " 100px
+                            "o . e e . " 100px
+                            "o . . . l " 100px
+                            ". g_ g_ g_ ." 100px
+                            / 100px 100px 100px 100px 100px;
+        }
+        .item1 {
+            grid-area: g;
+        }
+        .item2 {
+            grid-area: o_;
+        }
+        .item3 {
+            grid-area: o;
+        }
+        .item4 {
+            grid-area: g_;
+        }
+        .item5 {
+            grid-area: l;
+        }
+        .item6 {
+            grid-area: e;
+        }</pre>
     <div class="container container1">
         <div class="item item1">1</div>
         <div class="item item2">2</div>
@@ -27,16 +49,12 @@
         <div class="item item4">4</div>
         <div class="item item5">5</div>
         <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
     </div>
-    <span>bar</span>
     <pre class="code">
-            .container {
-                display: inline-grid;
-            }</pre>
-    <span>foo</span>
+        .container {
+            grid: 10px;
+            justify-content: start;
+        }</pre>
     <div class="container container2">
         <div class="item item1">1</div>
         <div class="item item2">2</div>
@@ -48,7 +66,6 @@
         <div class="item item8">8</div>
         <div class="item item9">9</div>
     </div>
-    <span>bar</span>
     <div><a href="../../index.html">返回列表</a></div>
 </body>
 
