--- a/pages/page9/index.html
+++ b/pages/page9/index.html
@@ -7,147 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>Grid justify-content属性 align-content属性 place-content属性</title>
+    <title>Grid grid-auto-columns属性 grid-auto-rows属性</title>
     <link rel="stylesheet" type="text/css" href="../../style/main.css">
     <link rel="stylesheet" type="text/css" href="./page.css">
 </head>
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">justify-content 属性，align-content 属性，place-content 属性</div>
-    <pre class="code">
-            .container {
-                grid: 10px;
-            }</pre>
-    <div class="container container1">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
+    <div class="page-title">grid-auto-columns 属性，grid-auto-rows 属性</div>
     <pre class="code">
         .container {
-            grid: 10px;
-            justify-content: start;
+            display: grid;
+            grid-template-columns: 100px 100px 100px;
+            grid-template-rows: 100px 100px 100px;
+            grid-auto-rows: 75px;
+        }
+        .item8{
+            grid-row-start: 4;
+            grid-column-start: 2;
+        }
+        .item9{
+            grid-row-start: 5;
+            grid-column-start: 3;
         }</pre>
-    <div class="container container2">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: end;
-        }</pre>
-    <div class="container container3">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: center;
-        }</pre>
-    <div class="container container4">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: stretch;
-        }</pre>
-    <div class="container container5">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-around;
-        }</pre>
-    <div class="container container6">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-between;
-        }</pre>
-    <div class="container container7">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-evenly;
-        }</pre>
-    <div class="container container8">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            place-content: space-around space-evenly;
-        }</pre>
-    <div class="container container9">
+    <div class="container">
         <div class="item item1">1</div>
         <div class="item item2">2</div>
         <div class="item item3">3</div>
