--- a/pages/page11/index.html
+++ b/pages/page11/index.html
@@ -7,18 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>Grid justify-content属性 align-content属性 place-content属性</title>
+    <title>Grid grid-column-start属性 grid-column-end属性 grid-row-start属性 grid-row-end属性</title>
     <link rel="stylesheet" type="text/css" href="../../style/main.css">
     <link rel="stylesheet" type="text/css" href="./page.css">
 </head>
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">justify-content 属性，align-content 属性，place-content 属性</div>
+    <div class="page-title">grid-column-start 属性，grid-column-end 属性<br>grid-row-start 属性，grid-row-end 属性</div>
     <pre class="code">
-            .container {
-                grid: 10px;
-            }</pre>
+        .item1 {
+            grid-column-start: 2;
+            grid-column-end: 4;
+        }</pre>
     <div class="container container1">
         <div class="item item1">1</div>
         <div class="item item2">2</div>
@@ -31,9 +32,11 @@
         <div class="item item9">9</div>
     </div>
     <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: start;
+        .item1 {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            grid-row-start: 2;
+            grid-row-end: 4;
         }</pre>
     <div class="container container2">
         <div class="item item1">1</div>
@@ -48,8 +51,13 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
-            justify-content: end;
+            grid-template-areas: 'header header header' 
+                                'main main sidebar' 
+                                'footer footer footer';
+        }
+        .item1{
+            grid-column-start: header-start;
+            grid-column-end: header-end;
         }</pre>
     <div class="container container3">
         <div class="item item1">1</div>
@@ -63,9 +71,8 @@
         <div class="item item9">9</div>
     </div>
     <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: center;
+        .item1 {
+            grid-column-start: span 2;
         }</pre>
     <div class="container container4">
         <div class="item item1">1</div>
@@ -79,75 +86,10 @@
         <div class="item item9">9</div>
     </div>
     <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: stretch;
+        .item1 {
+            grid-column-end: span 2;
         }</pre>
     <div class="container container5">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-around;
-        }</pre>
-    <div class="container container6">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-between;
-        }</pre>
-    <div class="container container7">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            justify-content: space-evenly;
-        }</pre>
-    <div class="container container8">
-        <div class="item item1">1</div>
-        <div class="item item2">2</div>
-        <div class="item item3">3</div>
-        <div class="item item4">4</div>
-        <div class="item item5">5</div>
-        <div class="item item6">6</div>
-        <div class="item item7">7</div>
-        <div class="item item8">8</div>
-        <div class="item item9">9</div>
-    </div>
-    <pre class="code">
-        .container {
-            grid: 10px;
-            place-content: space-around space-evenly;
-        }</pre>
-    <div class="container container9">
         <div class="item item1">1</div>
         <div class="item item2">2</div>
         <div class="item item3">3</div>
