--- a/pages/page12/index.html
+++ b/pages/page12/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-column 属性，grid-row 属性</div>
+    <div class="page-title">4.2 grid-column 属性，grid-row 属性</div>
     <pre class="code">
         .item1 {
             grid-column: 1 / 3;
