--- a/pages/page13/index.html
+++ b/pages/page13/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-area 属性</div>
+    <div class="page-title">4.3 grid-area 属性</div>
     <pre class="code">
         .container {
             grid-template-areas: 'a b c' 'd e f' 'g h i';
