--- a/pages/page9/index.html
+++ b/pages/page9/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-auto-columns 属性，grid-auto-rows 属性</div>
+    <div class="page-title">3.8 grid-auto-columns 属性，grid-auto-rows 属性</div>
     <pre class="code">
         .container {
             display: grid;
