--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">display属性</div>
+    <div class="page-title">3.1 display属性</div>
     <pre class="code">
             .container {
                 display: grid;
