--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-template-columns属性，grid-template-rows属性</div>
+    <div class="page-title">3.2 grid-template-columns属性，grid-template-rows属性</div>
     <pre class="code">
         .container {
             display: grid;
