--- a/pages/page4/index.html
+++ b/pages/page4/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-row-gap 属性，grid-column-gap 属性，grid-gap 属性</div>
+    <div class="page-title">3.3 grid-row-gap 属性，grid-column-gap 属性，grid-gap 属性</div>
     <pre class="code">
         .container {
             grid-row-gap: 10px;
