--- a/pages/page5/index.html
+++ b/pages/page5/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-template-areas 属性</div>
+    <div class="page-title">3.4 grid-template-areas 属性</div>
     <pre class="code">
         .container {
             display: grid;
@@ -113,21 +113,27 @@
         }
         .item1 {
             grid-area: g;
+            background-image: linear-gradient(to bottom right, #555, #111);
         }
         .item2 {
             grid-area: o_;
+            background-image: linear-gradient(to bottom right, #555, #111);
         }
         .item3 {
             grid-area: o;
+            background-image: linear-gradient(to bottom right, #555, #111);
         }
         .item4 {
             grid-area: g_;
+            background-image: linear-gradient(to bottom right, #555, #111);
         }
         .item5 {
             grid-area: l;
+            background-image: linear-gradient(to bottom right, #555, #111);
         }
         .item6 {
             grid-area: e;
+            background-image: linear-gradient(to bottom right, #f58d6d, #d1552f);
         }</pre>
     <div class="container container4">
         <div class="item item1">1</div>
