--- a/pages/page6/index.html
+++ b/pages/page6/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">grid-auto-flow 属性</div>
+    <div class="page-title">3.5 grid-auto-flow 属性</div>
     <pre class="code">
         .container {
             grid-auto-flow: row; // 默认值
@@ -46,9 +46,6 @@
         <div class="item item9">9</div>
     </div>
     <pre class="code">
-        .container {
-            grid: 10px;
-        }
         .item1, .item2 {
             grid-column-start: 1;
             grid-column-end: 3;
@@ -66,7 +63,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             grid-auto-flow: row dense;
         }
         .item1, .item2 {
@@ -86,7 +82,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             grid-auto-flow: column dense;
         }
         .item1, .item2 {
