--- a/pages/page7/index.html
+++ b/pages/page7/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">justify-items 属性，align-items 属性，place-items 属性</div>
+    <div class="page-title">3.6 justify-items 属性，align-items 属性，place-items 属性</div>
     <pre class="code">
         .container {
             justify-items: start;
@@ -65,7 +65,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             place-items: start end;
         }</pre>
     <div class="container container4">
