--- a/pages/page8/index.html
+++ b/pages/page8/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div><a href="../../index.html">返回列表</a></div>
-    <div class="page-title">justify-content 属性，align-content 属性，place-content 属性</div>
+    <div class="page-title">3.7 justify-content 属性，align-content 属性，place-content 属性</div>
     <pre class="code">
         .container {
             grid: 10px;
@@ -32,7 +32,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             justify-content: start;
         }</pre>
     <div class="container container2">
@@ -48,7 +47,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             justify-content: end;
         }</pre>
     <div class="container container3">
@@ -64,7 +62,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             justify-content: center;
         }</pre>
     <div class="container container4">
@@ -80,7 +77,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             justify-content: stretch;
         }</pre>
     <div class="container container5">
@@ -96,7 +92,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             justify-content: space-around;
         }</pre>
     <div class="container container6">
@@ -112,7 +107,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             justify-content: space-between;
         }</pre>
     <div class="container container7">
@@ -128,7 +122,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             justify-content: space-evenly;
         }</pre>
     <div class="container container8">
@@ -144,7 +137,6 @@
     </div>
     <pre class="code">
         .container {
-            grid: 10px;
             place-content: space-around space-evenly;
         }</pre>
     <div class="container container9">
