--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <a href="./pages/page14/index.html">4.4 justify-self 属性，align-self 属性，place-self 属性</a>
         </div>
     </div>
+    <script src="./utils/goTop.js"></script>
 </body>
 
 </html>
