--- a/pages/page5/index.html
+++ b/pages/page5/index.html
@@ -144,6 +144,8 @@
         <div class="item item6">6</div>
     </div>
     <div><a href="../../index.html">返回列表</a></div>
+    <div class="top" onClick="goTop()">回到顶部</div>
+    <script src="../../utils/goTop.js"></script>
 </body>
 
 </html>
