--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -198,6 +198,8 @@
         <div class="item item12">12</div>
     </div>
     <div><a href="../../index.html">返回列表</a></div>
+    <div class="top" onClick="goTop()">回到顶部</div>
+    <script src="../../utils/goTop.js"></script>
 </body>
 
 </html>
