--- a/pages/page7/index.html
+++ b/pages/page7/index.html
@@ -79,6 +79,8 @@
         <div class="item item9">9</div>
     </div>
     <div><a href="../../index.html">返回列表</a></div>
+    <div class="top" onClick="goTop()">回到顶部</div>
+    <script src="../../utils/goTop.js"></script>
 </body>
 
 </html>
